// Vitest Snapshot v1

exports[`Cell > Cell groupVue demo works fine 1`] = `
<div
  class="t-cell-group t-cell-group--card"
>
  <!--v-if-->
  
  <div
    class="t-cell t-cell--middle t-cell--bordered"
  >
    <div
      class="t-cell__left"
    >
      <div
        class="t-cell__left-icon"
      >
        <svg
          class="t-icon t-icon-lock-on"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M6 10v1h4v-1H6z"
            fill="currentColor"
            fill-opacity="0.9"
          />
          <path
            d="M4.5 5v1H3a.5.5 0 00-.5.5v7c0 .28.22.5.5.5h10a.5.5 0 00.5-.5v-7A.5.5 0 0013 6h-1.5V5a3.5 3.5 0 00-7 0zm6 1h-5V5a2.5 2.5 0 015 0v1zm-7 1h9v6h-9V7z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
      </div>
      <!--v-if-->
    </div>
    <div
      class="t-cell__title"
    >
      单行标题
      <!--v-if-->
      <!--v-if-->
    </div>
    <!--v-if-->
    <div
      class="t-cell__right"
    >
      <div
        class="t-cell__right-icon"
      >
        <svg
          class="t-icon t-icon-chevron-right"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    class="t-cell t-cell--middle t-cell--bordered"
  >
    <div
      class="t-cell__left"
    >
      <div
        class="t-cell__left-icon"
      >
        <svg
          class="t-icon t-icon-service"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M2.52 6.37a5.5 5.5 0 0110.98.13v4c0 .05 0 .1-.02.15A4.5 4.5 0 019 14.7H8v-1h1a3.5 3.5 0 003.4-2.7h-1.9a.5.5 0 01-.5-.5v-4c0-.28.22-.5.5-.5h1.93a4.5 4.5 0 00-8.86 0H5.5c.28 0 .5.22.5.5v4a.5.5 0 01-.5.5H3a.5.5 0 01-.5-.5v-4c0-.04 0-.09.02-.13zM12.5 7H11v3h1.5V7zm-9 0v3H5V7H3.5z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
      </div>
      <!--v-if-->
    </div>
    <div
      class="t-cell__title"
    >
      单行标题
      <!--v-if-->
      <!--v-if-->
    </div>
    <!--v-if-->
    <div
      class="t-cell__right"
    >
      <div
        class="t-cell__right-icon"
      >
        <svg
          class="t-icon t-icon-chevron-right"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    class="t-cell t-cell--middle t-cell--bordered"
  >
    <div
      class="t-cell__left"
    >
      <div
        class="t-cell__left-icon"
      >
        <svg
          class="t-icon t-icon-internet"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M1.1 7.9a6.9 6.9 0 1113.8 0v.2a6.9 6.9 0 11-13.8 0v-.2zm12.79.6h-3a9.86 9.86 0 01-1.96 5.43A5.9 5.9 0 0013.9 8.5zm-3-1h3a5.9 5.9 0 00-4.96-5.43A9.86 9.86 0 0110.9 7.5zm-1 0A8.87 8.87 0 008 2.5a8.87 8.87 0 00-1.89 5H9.9zm-4.78 1h-3a5.9 5.9 0 004.96 5.43A9.86 9.86 0 015.1 8.5zm0-1c.1-1.92.75-3.82 1.96-5.43A5.9 5.9 0 002.1 7.5h3zm4.78 1H6.1c.1 1.78.73 3.53 1.89 5a8.87 8.87 0 001.89-5z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
      </div>
      <!--v-if-->
    </div>
    <div
      class="t-cell__title"
    >
      单行标题
      <!--v-if-->
      <!--v-if-->
    </div>
    <!--v-if-->
    <div
      class="t-cell__right"
    >
      <div
        class="t-cell__right-icon"
      >
        <svg
          class="t-icon t-icon-chevron-right"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
      </div>
    </div>
  </div>
  
</div>
`;

exports[`Cell > Cell mobileVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
  data-v-f4324ab6=""
>
  <h1
    class="title"
    data-v-f4324ab6=""
  >
    Cell 单元格
  </h1>
  <p
    class="summary"
    data-v-f4324ab6=""
  >
    一行内容/功能的垂直排列方式。一行项目左侧为主要内容展示区域，右侧可增加更多操作内容
  </p>
  <div
    class="tdesign-mobile-demo-block"
    data-v-f4324ab6=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        01 组件类型
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        单行单元格
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="t-cell-group t-cell-group--default"
        data-v-f4324ab6=""
      >
        <!--v-if-->
        
        <div
          class="t-cell t-cell--middle t-cell--bordered"
        >
          <div
            class="t-cell__left"
          >
            <!--v-if-->
            <!--v-if-->
          </div>
          <div
            class="t-cell__title"
          >
            单行标题
            <!--v-if-->
            <!--v-if-->
          </div>
          <!--v-if-->
          <div
            class="t-cell__right"
          >
            <div
              class="t-cell__right-icon"
            >
              <svg
                class="t-icon t-icon-chevron-right"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
            </div>
          </div>
        </div>
        <div
          class="t-cell t-cell--middle t-cell--bordered"
        >
          <div
            class="t-cell__left"
          >
            <!--v-if-->
            <!--v-if-->
          </div>
          <div
            class="t-cell__title"
          >
            单行标题
            <span
              class="t-cell--required"
            >
               *
            </span>
            <!--v-if-->
          </div>
          <!--v-if-->
          <div
            class="t-cell__right"
          >
            <div
              class="t-cell__right-icon"
            >
              <svg
                class="t-icon t-icon-chevron-right"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
            </div>
          </div>
        </div>
        <div
          class="t-cell t-cell--middle t-cell--bordered"
        >
          <div
            class="t-cell__left"
          >
            <!--v-if-->
            <!--v-if-->
          </div>
          <div
            class="t-cell__title"
          >
            单行标题
            <!--v-if-->
            <!--v-if-->
          </div>
          <div
            class="t-cell__note"
          >
            
            <div
              class="t-badge"
            >
              <div
                class="t-badge__content"
              >
                <!---->
              </div>
              <div
                class="t-badge--basic t-badge--medium t-badge--circle t-badge--count t-has-count"
              >
                <!--v-if-->
                 16 
                <!--v-if-->
              </div>
              <!---->
            </div>
            
          </div>
          <div
            class="t-cell__right"
          >
            <div
              class="t-cell__right-icon"
            >
              <svg
                class="t-icon t-icon-chevron-right"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
            </div>
          </div>
        </div>
        <div
          class="t-cell t-cell--middle t-cell--bordered"
        >
          <div
            class="t-cell__left"
          >
            <!--v-if-->
            <!--v-if-->
          </div>
          <div
            class="t-cell__title"
          >
            单行标题
            <!--v-if-->
            <!--v-if-->
          </div>
          <div
            class="t-cell__note"
          >
            
            <div
              class="t-switch t-switch--medium t-switch--checked"
            >
              <div
                class="t-switch__dot t-switch__dot--medium t-switch__dot--checked t-switch__dot--plain"
              >
                <div
                  class="t-switch__label t-switch__label--medium t-switch__label--checked"
                >
                  <!--v-if-->
                  <!---->
                </div>
              </div>
            </div>
            
          </div>
          <!--v-if-->
        </div>
        <div
          class="t-cell t-cell--middle t-cell--bordered"
        >
          <div
            class="t-cell__left"
          >
            <!--v-if-->
            <!--v-if-->
          </div>
          <div
            class="t-cell__title"
          >
            单行标题
            <!--v-if-->
            <!--v-if-->
          </div>
          <div
            class="t-cell__note"
          >
            辅助信息
          </div>
          <div
            class="t-cell__right"
          >
            <div
              class="t-cell__right-icon"
            >
              <svg
                class="t-icon t-icon-chevron-right"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
            </div>
          </div>
        </div>
        <div
          class="t-cell t-cell--middle t-cell--bordered"
        >
          <div
            class="t-cell__left"
          >
            <div
              class="t-cell__left-icon"
            >
              <svg
                class="t-icon t-icon-lock-on"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M6 10v1h4v-1H6z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
                <path
                  d="M4.5 5v1H3a.5.5 0 00-.5.5v7c0 .28.22.5.5.5h10a.5.5 0 00.5-.5v-7A.5.5 0 0013 6h-1.5V5a3.5 3.5 0 00-7 0zm6 1h-5V5a2.5 2.5 0 015 0v1zm-7 1h9v6h-9V7z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
            </div>
            <!--v-if-->
          </div>
          <div
            class="t-cell__title"
          >
            单行标题
            <!--v-if-->
            <!--v-if-->
          </div>
          <!--v-if-->
          <div
            class="t-cell__right"
          >
            <div
              class="t-cell__right-icon"
            >
              <svg
                class="t-icon t-icon-chevron-right"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
            </div>
          </div>
        </div>
        
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
    data-v-f4324ab6=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        多行单元格
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="t-cell-group t-cell-group--default"
        data-v-f4324ab6=""
      >
        <!--v-if-->
        
        <div
          class="t-cell t-cell--middle t-cell--bordered"
        >
          <div
            class="t-cell__left"
          >
            <!--v-if-->
            <!--v-if-->
          </div>
          <div
            class="t-cell__title"
          >
            单行标题
            <!--v-if-->
            <div
              class="t-cell__description"
            >
              一段很长很长的内容文字
            </div>
          </div>
          <!--v-if-->
          <div
            class="t-cell__right"
          >
            <div
              class="t-cell__right-icon"
            >
              <svg
                class="t-icon t-icon-chevron-right"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
            </div>
          </div>
        </div>
        <div
          class="t-cell t-cell--middle t-cell--bordered"
        >
          <div
            class="t-cell__left"
          >
            <!--v-if-->
            <!--v-if-->
          </div>
          <div
            class="t-cell__title"
          >
            单行标题
            <span
              class="t-cell--required"
            >
               *
            </span>
            <div
              class="t-cell__description"
            >
              一段很长很长的内容文字
            </div>
          </div>
          <!--v-if-->
          <div
            class="t-cell__right"
          >
            <div
              class="t-cell__right-icon"
            >
              <svg
                class="t-icon t-icon-chevron-right"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
            </div>
          </div>
        </div>
        <div
          class="t-cell t-cell--middle t-cell--bordered"
        >
          <div
            class="t-cell__left"
          >
            <!--v-if-->
            <!--v-if-->
          </div>
          <div
            class="t-cell__title"
          >
            单行标题
            <!--v-if-->
            <div
              class="t-cell__description"
            >
              一段很长很长的内容文字
            </div>
          </div>
          <div
            class="t-cell__note"
          >
            
            <div
              class="t-badge"
            >
              <div
                class="t-badge__content"
              >
                <!---->
              </div>
              <div
                class="t-badge--basic t-badge--medium t-badge--circle t-badge--count t-has-count"
              >
                <!--v-if-->
                 16 
                <!--v-if-->
              </div>
              <!---->
            </div>
            
          </div>
          <div
            class="t-cell__right"
          >
            <div
              class="t-cell__right-icon"
            >
              <svg
                class="t-icon t-icon-chevron-right"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
            </div>
          </div>
        </div>
        <div
          class="t-cell t-cell--middle t-cell--bordered"
        >
          <div
            class="t-cell__left"
          >
            <!--v-if-->
            <!--v-if-->
          </div>
          <div
            class="t-cell__title"
          >
            单行标题
            <!--v-if-->
            <div
              class="t-cell__description"
            >
              一段很长很长的内容文字
            </div>
          </div>
          <div
            class="t-cell__note"
          >
            
            <div
              class="t-switch t-switch--medium t-switch--checked"
            >
              <div
                class="t-switch__dot t-switch__dot--medium t-switch__dot--checked t-switch__dot--plain"
              >
                <div
                  class="t-switch__label t-switch__label--medium t-switch__label--checked"
                >
                  <!--v-if-->
                  <!---->
                </div>
              </div>
            </div>
            
          </div>
          <!--v-if-->
        </div>
        <div
          class="t-cell t-cell--middle t-cell--bordered"
        >
          <div
            class="t-cell__left"
          >
            <!--v-if-->
            <!--v-if-->
          </div>
          <div
            class="t-cell__title"
          >
            单行标题
            <!--v-if-->
            <div
              class="t-cell__description"
            >
              一段很长很长的内容文字
            </div>
          </div>
          <div
            class="t-cell__note"
          >
            辅助信息
          </div>
          <div
            class="t-cell__right"
          >
            <div
              class="t-cell__right-icon"
            >
              <svg
                class="t-icon t-icon-chevron-right"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
            </div>
          </div>
        </div>
        <div
          class="t-cell t-cell--middle t-cell--bordered"
        >
          <div
            class="t-cell__left"
          >
            <div
              class="t-cell__left-icon"
            >
              
              <svg
                class="t-icon t-icon-lock-on"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M6 10v1h4v-1H6z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
                <path
                  d="M4.5 5v1H3a.5.5 0 00-.5.5v7c0 .28.22.5.5.5h10a.5.5 0 00.5-.5v-7A.5.5 0 0013 6h-1.5V5a3.5 3.5 0 00-7 0zm6 1h-5V5a2.5 2.5 0 015 0v1zm-7 1h9v6h-9V7z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
              
            </div>
            <!--v-if-->
          </div>
          <div
            class="t-cell__title"
          >
            单行标题
            <!--v-if-->
            <div
              class="t-cell__description"
            >
              一段很长很长的内容文字
            </div>
          </div>
          <!--v-if-->
          <div
            class="t-cell__right"
          >
            <div
              class="t-cell__right-icon"
            >
              <svg
                class="t-icon t-icon-chevron-right"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
            </div>
          </div>
        </div>
        <div
          class="t-cell t-cell--middle t-cell--bordered"
        >
          <div
            class="t-cell__left"
          >
            <!--v-if-->
            <!--v-if-->
          </div>
          <div
            class="t-cell__title"
          >
            单行标题
            <!--v-if-->
            <div
              class="t-cell__description"
            >
              一段很长很长的内容文字，长文本自动换行，该选项的描述是一段很长的内容
            </div>
          </div>
          <!--v-if-->
          <!--v-if-->
        </div>
        <div
          class="t-cell t-cell--middle t-cell--bordered"
        >
          <div
            class="t-cell__left"
          >
            <!--v-if-->
            <!--v-if-->
          </div>
          <div
            class="t-cell__title"
          >
            多行高度不定，长文本自动换行，该选项的描述是一段很长的内容
            <!--v-if-->
            <div
              class="t-cell__description"
            >
              一段很长很长的内容文字，长文本自动换行，该选项的描述是一段很长的内容
            </div>
          </div>
          <!--v-if-->
          <!--v-if-->
        </div>
        <div
          class="t-cell t-cell--middle t-cell--bordered"
        >
          <div
            class="t-cell__left"
          >
            <div
              class="t-cell__left-icon"
            >
              
              <div
                class="t-avatar t-avatar--circle"
              >
                <div
                  class="t-avatar__inner"
                >
                  <div
                    class="t-image t-image--square"
                  >
                    <div
                      class="t-image__mask"
                    >
                      <div
                        class="t-loading"
                        style="font-size: 20px;"
                      >
                        
                        <div
                          class="t-loading__dots"
                          style="animation-duration: 800ms; width: 20px; height: 20px;"
                        >
                          <div
                            class="t-loading__dot"
                            style="animation-duration: 0.8s; animation-delay: 0s;"
                          />
                          <div
                            class="t-loading__dot"
                            style="animation-duration: 0.8s; animation-delay: 0.26666666666666666s;"
                          />
                          <div
                            class="t-loading__dot"
                            style="animation-duration: 0.8s; animation-delay: 0.5333333333333333s;"
                          />
                        </div>
                        
                        <!--v-if-->
                        <!---->
                      </div>
                    </div>
                    <picture>
                      <!--v-if-->
                      <img
                        alt=""
                        class="t-image__img"
                        src="https://tdesign.gtimg.com/mobile/demos/avatar_1.png"
                        style="object-fit: fill; object-position: center;"
                      />
                    </picture>
                  </div>
                </div>
                <!--v-if-->
              </div>
              
            </div>
            <!--v-if-->
          </div>
          <div
            class="t-cell__title"
          >
            多行带头像
            <!--v-if-->
            <div
              class="t-cell__description"
            >
              一段很长很长的内容文字
            </div>
          </div>
          <!--v-if-->
          <div
            class="t-cell__right"
          >
            <div
              class="t-cell__right-icon"
            >
              <svg
                class="t-icon t-icon-chevron-right"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
            </div>
          </div>
        </div>
        <div
          class="t-cell t-cell--middle t-cell--bordered"
        >
          <div
            class="t-cell__left"
          >
            <!--v-if-->
            
            <img
              class="t-cell__left-image"
              src="https://tdesign.gtimg.com/mobile/%E5%9B%BE%E7%89%87.png"
            />
            
          </div>
          <div
            class="t-cell__title"
          >
            多行带图片
            <!--v-if-->
            <div
              class="t-cell__description"
            >
              一段很长很长的内容文字
            </div>
          </div>
          <!--v-if-->
          <!--v-if-->
        </div>
        
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block"
    data-v-f4324ab6=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        02 组件样式
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        卡片单元格
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="t-cell-group t-cell-group--card"
        data-v-f4324ab6=""
      >
        <!--v-if-->
        
        <div
          class="t-cell t-cell--middle t-cell--bordered"
        >
          <div
            class="t-cell__left"
          >
            <div
              class="t-cell__left-icon"
            >
              <svg
                class="t-icon t-icon-lock-on"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M6 10v1h4v-1H6z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
                <path
                  d="M4.5 5v1H3a.5.5 0 00-.5.5v7c0 .28.22.5.5.5h10a.5.5 0 00.5-.5v-7A.5.5 0 0013 6h-1.5V5a3.5 3.5 0 00-7 0zm6 1h-5V5a2.5 2.5 0 015 0v1zm-7 1h9v6h-9V7z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
            </div>
            <!--v-if-->
          </div>
          <div
            class="t-cell__title"
          >
            单行标题
            <!--v-if-->
            <!--v-if-->
          </div>
          <!--v-if-->
          <div
            class="t-cell__right"
          >
            <div
              class="t-cell__right-icon"
            >
              <svg
                class="t-icon t-icon-chevron-right"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
            </div>
          </div>
        </div>
        <div
          class="t-cell t-cell--middle t-cell--bordered"
        >
          <div
            class="t-cell__left"
          >
            <div
              class="t-cell__left-icon"
            >
              <svg
                class="t-icon t-icon-service"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M2.52 6.37a5.5 5.5 0 0110.98.13v4c0 .05 0 .1-.02.15A4.5 4.5 0 019 14.7H8v-1h1a3.5 3.5 0 003.4-2.7h-1.9a.5.5 0 01-.5-.5v-4c0-.28.22-.5.5-.5h1.93a4.5 4.5 0 00-8.86 0H5.5c.28 0 .5.22.5.5v4a.5.5 0 01-.5.5H3a.5.5 0 01-.5-.5v-4c0-.04 0-.09.02-.13zM12.5 7H11v3h1.5V7zm-9 0v3H5V7H3.5z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
            </div>
            <!--v-if-->
          </div>
          <div
            class="t-cell__title"
          >
            单行标题
            <!--v-if-->
            <!--v-if-->
          </div>
          <!--v-if-->
          <div
            class="t-cell__right"
          >
            <div
              class="t-cell__right-icon"
            >
              <svg
                class="t-icon t-icon-chevron-right"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
            </div>
          </div>
        </div>
        <div
          class="t-cell t-cell--middle t-cell--bordered"
        >
          <div
            class="t-cell__left"
          >
            <div
              class="t-cell__left-icon"
            >
              <svg
                class="t-icon t-icon-internet"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M1.1 7.9a6.9 6.9 0 1113.8 0v.2a6.9 6.9 0 11-13.8 0v-.2zm12.79.6h-3a9.86 9.86 0 01-1.96 5.43A5.9 5.9 0 0013.9 8.5zm-3-1h3a5.9 5.9 0 00-4.96-5.43A9.86 9.86 0 0110.9 7.5zm-1 0A8.87 8.87 0 008 2.5a8.87 8.87 0 00-1.89 5H9.9zm-4.78 1h-3a5.9 5.9 0 004.96 5.43A9.86 9.86 0 015.1 8.5zm0-1c.1-1.92.75-3.82 1.96-5.43A5.9 5.9 0 002.1 7.5h3zm4.78 1H6.1c.1 1.78.73 3.53 1.89 5a8.87 8.87 0 001.89-5z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
            </div>
            <!--v-if-->
          </div>
          <div
            class="t-cell__title"
          >
            单行标题
            <!--v-if-->
            <!--v-if-->
          </div>
          <!--v-if-->
          <div
            class="t-cell__right"
          >
            <div
              class="t-cell__right-icon"
            >
              <svg
                class="t-icon t-icon-chevron-right"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
            </div>
          </div>
        </div>
        
      </div>
      
    </div>
  </div>
</div>
`;

exports[`Cell > Cell multipleVue demo works fine 1`] = `
<div
  class="t-cell-group t-cell-group--default"
>
  <!--v-if-->
  
  <div
    class="t-cell t-cell--middle t-cell--bordered"
  >
    <div
      class="t-cell__left"
    >
      <!--v-if-->
      <!--v-if-->
    </div>
    <div
      class="t-cell__title"
    >
      单行标题
      <!--v-if-->
      <div
        class="t-cell__description"
      >
        一段很长很长的内容文字
      </div>
    </div>
    <!--v-if-->
    <div
      class="t-cell__right"
    >
      <div
        class="t-cell__right-icon"
      >
        <svg
          class="t-icon t-icon-chevron-right"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    class="t-cell t-cell--middle t-cell--bordered"
  >
    <div
      class="t-cell__left"
    >
      <!--v-if-->
      <!--v-if-->
    </div>
    <div
      class="t-cell__title"
    >
      单行标题
      <span
        class="t-cell--required"
      >
         *
      </span>
      <div
        class="t-cell__description"
      >
        一段很长很长的内容文字
      </div>
    </div>
    <!--v-if-->
    <div
      class="t-cell__right"
    >
      <div
        class="t-cell__right-icon"
      >
        <svg
          class="t-icon t-icon-chevron-right"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    class="t-cell t-cell--middle t-cell--bordered"
  >
    <div
      class="t-cell__left"
    >
      <!--v-if-->
      <!--v-if-->
    </div>
    <div
      class="t-cell__title"
    >
      单行标题
      <!--v-if-->
      <div
        class="t-cell__description"
      >
        一段很长很长的内容文字
      </div>
    </div>
    <div
      class="t-cell__note"
    >
      
      <div
        class="t-badge"
      >
        <div
          class="t-badge__content"
        >
          <!---->
        </div>
        <div
          class="t-badge--basic t-badge--medium t-badge--circle t-badge--count t-has-count"
        >
          <!--v-if-->
           16 
          <!--v-if-->
        </div>
        <!---->
      </div>
      
    </div>
    <div
      class="t-cell__right"
    >
      <div
        class="t-cell__right-icon"
      >
        <svg
          class="t-icon t-icon-chevron-right"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    class="t-cell t-cell--middle t-cell--bordered"
  >
    <div
      class="t-cell__left"
    >
      <!--v-if-->
      <!--v-if-->
    </div>
    <div
      class="t-cell__title"
    >
      单行标题
      <!--v-if-->
      <div
        class="t-cell__description"
      >
        一段很长很长的内容文字
      </div>
    </div>
    <div
      class="t-cell__note"
    >
      
      <div
        class="t-switch t-switch--medium t-switch--checked"
      >
        <div
          class="t-switch__dot t-switch__dot--medium t-switch__dot--checked t-switch__dot--plain"
        >
          <div
            class="t-switch__label t-switch__label--medium t-switch__label--checked"
          >
            <!--v-if-->
            <!---->
          </div>
        </div>
      </div>
      
    </div>
    <!--v-if-->
  </div>
  <div
    class="t-cell t-cell--middle t-cell--bordered"
  >
    <div
      class="t-cell__left"
    >
      <!--v-if-->
      <!--v-if-->
    </div>
    <div
      class="t-cell__title"
    >
      单行标题
      <!--v-if-->
      <div
        class="t-cell__description"
      >
        一段很长很长的内容文字
      </div>
    </div>
    <div
      class="t-cell__note"
    >
      辅助信息
    </div>
    <div
      class="t-cell__right"
    >
      <div
        class="t-cell__right-icon"
      >
        <svg
          class="t-icon t-icon-chevron-right"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    class="t-cell t-cell--middle t-cell--bordered"
  >
    <div
      class="t-cell__left"
    >
      <div
        class="t-cell__left-icon"
      >
        
        <svg
          class="t-icon t-icon-lock-on"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M6 10v1h4v-1H6z"
            fill="currentColor"
            fill-opacity="0.9"
          />
          <path
            d="M4.5 5v1H3a.5.5 0 00-.5.5v7c0 .28.22.5.5.5h10a.5.5 0 00.5-.5v-7A.5.5 0 0013 6h-1.5V5a3.5 3.5 0 00-7 0zm6 1h-5V5a2.5 2.5 0 015 0v1zm-7 1h9v6h-9V7z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
        
      </div>
      <!--v-if-->
    </div>
    <div
      class="t-cell__title"
    >
      单行标题
      <!--v-if-->
      <div
        class="t-cell__description"
      >
        一段很长很长的内容文字
      </div>
    </div>
    <!--v-if-->
    <div
      class="t-cell__right"
    >
      <div
        class="t-cell__right-icon"
      >
        <svg
          class="t-icon t-icon-chevron-right"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    class="t-cell t-cell--middle t-cell--bordered"
  >
    <div
      class="t-cell__left"
    >
      <!--v-if-->
      <!--v-if-->
    </div>
    <div
      class="t-cell__title"
    >
      单行标题
      <!--v-if-->
      <div
        class="t-cell__description"
      >
        一段很长很长的内容文字，长文本自动换行，该选项的描述是一段很长的内容
      </div>
    </div>
    <!--v-if-->
    <!--v-if-->
  </div>
  <div
    class="t-cell t-cell--middle t-cell--bordered"
  >
    <div
      class="t-cell__left"
    >
      <!--v-if-->
      <!--v-if-->
    </div>
    <div
      class="t-cell__title"
    >
      多行高度不定，长文本自动换行，该选项的描述是一段很长的内容
      <!--v-if-->
      <div
        class="t-cell__description"
      >
        一段很长很长的内容文字，长文本自动换行，该选项的描述是一段很长的内容
      </div>
    </div>
    <!--v-if-->
    <!--v-if-->
  </div>
  <div
    class="t-cell t-cell--middle t-cell--bordered"
  >
    <div
      class="t-cell__left"
    >
      <div
        class="t-cell__left-icon"
      >
        
        <div
          class="t-avatar t-avatar--circle"
        >
          <div
            class="t-avatar__inner"
          >
            <div
              class="t-image t-image--square"
            >
              <div
                class="t-image__mask"
              >
                <div
                  class="t-loading"
                  style="font-size: 20px;"
                >
                  
                  <div
                    class="t-loading__dots"
                    style="animation-duration: 800ms; width: 20px; height: 20px;"
                  >
                    <div
                      class="t-loading__dot"
                      style="animation-duration: 0.8s; animation-delay: 0s;"
                    />
                    <div
                      class="t-loading__dot"
                      style="animation-duration: 0.8s; animation-delay: 0.26666666666666666s;"
                    />
                    <div
                      class="t-loading__dot"
                      style="animation-duration: 0.8s; animation-delay: 0.5333333333333333s;"
                    />
                  </div>
                  
                  <!--v-if-->
                  <!---->
                </div>
              </div>
              <picture>
                <!--v-if-->
                <img
                  alt=""
                  class="t-image__img"
                  src="https://tdesign.gtimg.com/mobile/demos/avatar_1.png"
                  style="object-fit: fill; object-position: center;"
                />
              </picture>
            </div>
          </div>
          <!--v-if-->
        </div>
        
      </div>
      <!--v-if-->
    </div>
    <div
      class="t-cell__title"
    >
      多行带头像
      <!--v-if-->
      <div
        class="t-cell__description"
      >
        一段很长很长的内容文字
      </div>
    </div>
    <!--v-if-->
    <div
      class="t-cell__right"
    >
      <div
        class="t-cell__right-icon"
      >
        <svg
          class="t-icon t-icon-chevron-right"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    class="t-cell t-cell--middle t-cell--bordered"
  >
    <div
      class="t-cell__left"
    >
      <!--v-if-->
      
      <img
        class="t-cell__left-image"
        src="https://tdesign.gtimg.com/mobile/%E5%9B%BE%E7%89%87.png"
      />
      
    </div>
    <div
      class="t-cell__title"
    >
      多行带图片
      <!--v-if-->
      <div
        class="t-cell__description"
      >
        一段很长很长的内容文字
      </div>
    </div>
    <!--v-if-->
    <!--v-if-->
  </div>
  
</div>
`;

exports[`Cell > Cell singleVue demo works fine 1`] = `
<div
  class="t-cell-group t-cell-group--default"
>
  <!--v-if-->
  
  <div
    class="t-cell t-cell--middle t-cell--bordered"
  >
    <div
      class="t-cell__left"
    >
      <!--v-if-->
      <!--v-if-->
    </div>
    <div
      class="t-cell__title"
    >
      单行标题
      <!--v-if-->
      <!--v-if-->
    </div>
    <!--v-if-->
    <div
      class="t-cell__right"
    >
      <div
        class="t-cell__right-icon"
      >
        <svg
          class="t-icon t-icon-chevron-right"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    class="t-cell t-cell--middle t-cell--bordered"
  >
    <div
      class="t-cell__left"
    >
      <!--v-if-->
      <!--v-if-->
    </div>
    <div
      class="t-cell__title"
    >
      单行标题
      <span
        class="t-cell--required"
      >
         *
      </span>
      <!--v-if-->
    </div>
    <!--v-if-->
    <div
      class="t-cell__right"
    >
      <div
        class="t-cell__right-icon"
      >
        <svg
          class="t-icon t-icon-chevron-right"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    class="t-cell t-cell--middle t-cell--bordered"
  >
    <div
      class="t-cell__left"
    >
      <!--v-if-->
      <!--v-if-->
    </div>
    <div
      class="t-cell__title"
    >
      单行标题
      <!--v-if-->
      <!--v-if-->
    </div>
    <div
      class="t-cell__note"
    >
      
      <div
        class="t-badge"
      >
        <div
          class="t-badge__content"
        >
          <!---->
        </div>
        <div
          class="t-badge--basic t-badge--medium t-badge--circle t-badge--count t-has-count"
        >
          <!--v-if-->
           16 
          <!--v-if-->
        </div>
        <!---->
      </div>
      
    </div>
    <div
      class="t-cell__right"
    >
      <div
        class="t-cell__right-icon"
      >
        <svg
          class="t-icon t-icon-chevron-right"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    class="t-cell t-cell--middle t-cell--bordered"
  >
    <div
      class="t-cell__left"
    >
      <!--v-if-->
      <!--v-if-->
    </div>
    <div
      class="t-cell__title"
    >
      单行标题
      <!--v-if-->
      <!--v-if-->
    </div>
    <div
      class="t-cell__note"
    >
      
      <div
        class="t-switch t-switch--medium t-switch--checked"
      >
        <div
          class="t-switch__dot t-switch__dot--medium t-switch__dot--checked t-switch__dot--plain"
        >
          <div
            class="t-switch__label t-switch__label--medium t-switch__label--checked"
          >
            <!--v-if-->
            <!---->
          </div>
        </div>
      </div>
      
    </div>
    <!--v-if-->
  </div>
  <div
    class="t-cell t-cell--middle t-cell--bordered"
  >
    <div
      class="t-cell__left"
    >
      <!--v-if-->
      <!--v-if-->
    </div>
    <div
      class="t-cell__title"
    >
      单行标题
      <!--v-if-->
      <!--v-if-->
    </div>
    <div
      class="t-cell__note"
    >
      辅助信息
    </div>
    <div
      class="t-cell__right"
    >
      <div
        class="t-cell__right-icon"
      >
        <svg
          class="t-icon t-icon-chevron-right"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    class="t-cell t-cell--middle t-cell--bordered"
  >
    <div
      class="t-cell__left"
    >
      <div
        class="t-cell__left-icon"
      >
        <svg
          class="t-icon t-icon-lock-on"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M6 10v1h4v-1H6z"
            fill="currentColor"
            fill-opacity="0.9"
          />
          <path
            d="M4.5 5v1H3a.5.5 0 00-.5.5v7c0 .28.22.5.5.5h10a.5.5 0 00.5-.5v-7A.5.5 0 0013 6h-1.5V5a3.5 3.5 0 00-7 0zm6 1h-5V5a2.5 2.5 0 015 0v1zm-7 1h9v6h-9V7z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
      </div>
      <!--v-if-->
    </div>
    <div
      class="t-cell__title"
    >
      单行标题
      <!--v-if-->
      <!--v-if-->
    </div>
    <!--v-if-->
    <div
      class="t-cell__right"
    >
      <div
        class="t-cell__right-icon"
      >
        <svg
          class="t-icon t-icon-chevron-right"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
      </div>
    </div>
  </div>
  
</div>
`;
